syntax = "proto2";
package ncp.pb;

message Message {
	enum MessageType {
		GET_PEERS_REQ = 1;
		GET_PEERS_RES = 2;
    }
    
    message PeerInfo {
        required bytes peer_id = 1;
        repeated bytes addrs = 2;
    }

	// defines what type of message it is.
	optional MessageType type = 1;

	// defines what coral cluster level this query/response belongs to.
    repeated PeerInfo peers = 4;
}
